# bazinga-indeed

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DONATE.md  Dockerfile  IDENTITY.md  LAUNCH.md  LICENSE  MEDIUM_ARTICLE.md  MEDIUM_ARTICLE_FORMATTED.md  POB_EXPLAINED.html  README.md  SPONSORS.md  USAGE.md  bazinga.py  bazinga_cluster_test.py  bazinga_consensus.json  demo.tape  docker-compose.yml  gdrive_deep_purge.sh  pyproject.toml  run.sh
.github/: FUNDING.yml
.github/workflows/: publish.yml
bazinga/: __init__.py  __main__.py  advanced_generator.py  attestation_service.py  carm.py  cli.py  config.py  constants.py  intelligent_coder.py  inter_ai.py  kb.py  lambda_g.py  learning.py  llm_orchestrator.py  local_llm.py  mcp_server.py  mesh.py  payment_gateway.py  phi_coherence.py  public_knowledge.py  quantum.py  rac.py  recursive_trust.py  resonance.py  tensor.py  trd_engine.py  trd_heartbeat.py  tui.py
bazinga/agent/: __init__.py  context.py  loop.py  memory.py  shell.py  tools.py  verified_fixes.py
bazinga/blockchain/: __init__.py  block.py  chain.py  gradient_validator.py  inference_market.py  knowledge_ledger.py  miner.py  resonance_anchor.py  smart_contracts.py  transaction.py  trust_oracle.py  wallet.py
bazinga/cli/: __init__.py  _core.py  utils.py
bazinga/cli/commands/: __init__.py  ai.py  chain.py  evolution.py  info.py  kb.py  network.py
bazinga/cli_modules/: __init__.py  help.py
bazinga/core/intelligence/: master_writer.py
bazinga/darmiyan/: __init__.py  consensus.py  constants.py  manifold_pob.py  node.py  protocol.py
bazinga/decentralized/: __init__.py  consensus.py  model_distribution.py  peer_discovery.py
bazinga/evolution/: __init__.py  constitution.py  engine.py  graduated.py  phi_ethics.py  proposal.py  sandbox.py  voting.py
bazinga/federated/: __init__.py  aggregator.py  differential_privacy.py  federated_coordinator.py  gradients.py  learner.py  local_trainer.py  lora.py  lora_adapter.py  secure_aggregation.py
bazinga/hf_space/: README.md  app.py  requirements.txt
bazinga/inference/: __init__.py  distributed_inference.py  local_model.py  model_router.py  ollama_detector.py
bazinga/knowledge/: __init__.py  scanner.py
bazinga/llm/: __init__.py  providers.py
bazinga/p2p/: __init__.py  alpha_seed.py  dht.py  dht_bridge.py  distributed_query.py  gradient_sharing.py  hf_registry.py  knowledge_sharing.py  knowledge_sync.py  mesh_query.py  nat.py  network.py  node.py  persistence.py  protocol.py  transport.py  trust_router.py
bazinga/tui/: __init__.py  app.py
docs/: AI_SAFETY_ANALYSIS.md  BAZINGA_DASHBOARD.html  BAZINGA_MANIFESTO.md  DARMIYAN_V3_INTEGRATION.md  SELF_PROPOSAL_SYSTEM.md  blockchain.html  carm.html  cli.html  index.html  pob.html  trd.html  visual.html
papers/: ZENODO_AI_ON_BLOCKCHAIN.md
research/: coherence_scaling_v2.py  investor_demo.py  phi_fractal_restore.py  phi_limit_test.py  phi_restoration.py  phi_superiority.py
riemann_proof/: algebraic_proof.py  comprehensive_verification.py  response_to_critique.py  visualize_proof.py
scripts/: import_claude_data.py
src/core/config/: __init__.py  config_manager.py
src/core/intelligence/: __init__.py  alpha_seed.py  distributed_ai.py  knowledge_synthesizer.py  real_ai.py  universal_filter.py
src/core/lambda_g/: __init__.py  lambda_g_operator.py
src/core/symbol/: __init__.py  symbol_shell.py  universal_symbols.py
tests/: test_1000_node_simulation.py  test_3node_network.py  test_actual_learning.py  test_bazinga.py  test_byzantine_fault_tolerance.py  test_cli.py  test_consciousness_trd.py  test_darmiyan.py
tests/adversarial/: SECURITY_AUDIT_REPORT.md  test_pob_attacks.py  test_pob_attacks_v2.py  test_pob_fixed.py  test_round4_deep_audit.py  test_trust_attacks.py  verify_9_fixes.py
